// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audio Player Composable should phasing playPause button loading state as expected 1`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<button
  aria-busy="true"
  aria-label="Play"
  aria-live="polite"
  aria-pressed="false"
  class="emotion-0"
  data-testid="audio-player-play-pause-button"
  type="button"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3"
        fill="currentColor"
        viewBox="0 0 64 64"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="50%"
          cy="50%"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Audio Player Composable should phasing playPause button loading state as expected 2`] = `
.emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #3358CC;
  border-radius: 50%;
  color: #FFFFFF;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: pointer;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #FFFFFF;
}

.emotion-0:hover:not(:disabled) {
  background-color: #2B4AAB;
}

.emotion-0:active:not(:disabled) {
  background-color: #213A82;
}

.emotion-0:disabled {
  background-color: #F4F4F4;
  color: #C0C0C0;
}

.emotion-0:disabled svg {
  fill: #C0C0C0;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
  fill: #2E2E2E;
  vertical-align: unset;
  display: inline-block;
}

<button
  aria-label="Play"
  aria-pressed="false"
  class="emotion-0"
  data-testid="audio-player-play-pause-button"
  type="button"
>
  <div
    class="emotion-1"
  >
    <div
      class="emotion-2"
    >
      <svg
        aria-hidden="true"
        class="emotion-3 emotion-4"
        fill="currentColor"
        focusable="false"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M8 5v14l11-7z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Audio Player Composable should render correctly when in autoplay 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<section>
    <audio
      autoplay=""
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <button
      aria-busy="true"
      aria-label="Stop"
      aria-live="polite"
      aria-pressed="true"
      class="emotion-0"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-3"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;

exports[`Audio Player Composable should render with no errors 1`] = `
<DocumentFragment>
  .emotion-0 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  width: 64px;
  height: 64px;
  padding: 16px;
  cursor: default;
  overflow: hidden;
  border: none;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #AEBFFF;
  border-radius: 50%;
  color: #3358CC;
  margin: 0;
  transition-property: background-color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  cursor: progress;
}

.emotion-0 svg {
  width: 32px;
  height: 32px;
}

.emotion-0 svg {
  fill: #3358CC;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-left: calc(-8px/2);
  margin-right: calc(-8px/2);
}

.emotion-2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  margin-left: calc(8px/2);
  margin-right: calc(8px/2);
}

.emotion-3 {
  width: 32px;
  height: 32px;
  stroke: #3358CC;
}

.emotion-3 circle {
  r: calc(50% - 2px);
  fill: transparent;
  stroke-width: 2px;
  stroke-dasharray: 502;
  stroke-dashoffset: 360;
  -webkit-transform: rotate(270deg);
  -moz-transform: rotate(270deg);
  -ms-transform: rotate(270deg);
  transform: rotate(270deg);
  transform-origin: 50% 50%;
  will-change: stroke-dasharray;
  will-change: stroke-dashoffset;
  will-change: transform;
  -webkit-animation: rotate 1s linear infinite;
  animation: rotate 1s linear infinite;
}

<section>
    <audio
      data-testid="audio-element"
      src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3"
    />
    <button
      aria-busy="true"
      aria-label="Play"
      aria-live="polite"
      aria-pressed="false"
      class="emotion-0"
      data-testid="audio-player-play-pause-button"
      type="button"
    >
      <div
        class="emotion-1"
      >
        <div
          class="emotion-2"
        >
          <svg
            aria-hidden="true"
            class="emotion-3"
            fill="currentColor"
            viewBox="0 0 64 64"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="50%"
              cy="50%"
            />
          </svg>
        </div>
      </div>
    </button>
  </section>
</DocumentFragment>
`;
